float and clearfix in box model

--- a/WAP/W1D2/box-model-2/index.html
+++ b/WAP/W1D2/box-model-2/index.html
@@ -7,32 +7,80 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="div--1">
-      <img src="rose.jpeg" alt="rose flower" />
+    <div class="contianer">
+      <h3>Image Right</h3>
+      <div class="in--between-1">
+        <span class="thumbnail right"
+          ><img class="myImage" src="rose.jpeg" alt="rose flower" /></span
+        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+        aspernatur dolores provident modi officia, rerum odio alias esse
+        praesentium hic architecto deleniti ipsum quia velit sed excepturi,
+        vitae distinctio explicabo! Lorem, ipsum dolor sit amet consectetur
+        adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing
+        elit. Ipsa hic quibusdam vitae eveniet odit! Aperiam, odio blanditiis
+        accusamus veritatis eum obcaecati provident quidem, voluptatibus
+        voluptas in voluptate harum nihil illum!
+      </div>
+      <br />
+      <h3>Image Left</h3>
+      <div div class="in--between-2">
+        <span class="thumbnail left"
+          ><img class="myImage" src="rose.jpeg" alt="rose flower" /></span
+        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+        aspernatur dolores provident modi officia, rerum odio alias esse
+        praesentium hic architecto deleniti ipsum quia velit sed excepturi,
+        vitae distinctio explicabo! Lorem, ipsum dolor sit amet consectetur
+        adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Corporis, asperiores esse. Exercitationem, perspiciatis neque
+        labore quod voluptates animi ea asperiores vel autem porro officiis
+        voluptate, deserunt ut iure nostrum a.
+      </div>
+      <br />
 
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aspernatur
-      dolores provident modi officia, rerum odio alias esse praesentium hic
-      architecto deleniti ipsum quia velit sed excepturi, vitae distinctio
-      explicabo! Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-    </div>
-    <div class="div--2">
-      <img src="rose.jpeg" alt="rose flower" />
+      <h3>Text in between images</h3>
+      <div div class="in--between-3 clearfix">
+        <span class="thumbnail left"
+          ><img class="myImage" src="rose.jpeg" alt="rose flower"
+        /></span>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+        aspernatur dolores provident modi officia, rerum odio alias esse
+        praesentium hic architecto deleniti ipsum quia velit sed excepturi,
+        vitae distinctio explicabo! Lorem, ipsum dolor sit amet consectetur
+        adipisicing elit. Lorem, ipsum dolor sit amet consectetur adipisicing
+        elit. Natus modi in sint doloribus, deleniti est, harum aliquid minima
+        quibusdam, qui sed minus molestias veniam aliquam tenetur mollitia
+        blanditiis unde fuga.
 
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aspernatur
-      dolores provident modi officia, rerum odio alias esse praesentium hic
-      architecto deleniti ipsum quia velit sed excepturi, vitae distinctio
-      explicabo! Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        <span class="thumbnail right"
+          ><img class="myImage" src="rose.jpeg" alt="rose flower"
+        /></span>
+      </div>
+      <br />
 
-      <img src="rose.jpeg" alt="rose flower" />
-    </div>
+      <h3>Image in between Text</h3>
+      <div class="in--between-4 clearfix">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+        aspernatur dolores provident modi officia, rerum odio alias esse
+        praesentium hic architecto deleniti ipsum quia velit sed excepturi,
+        vitae distinctio explicabo! Lorem, ipsum dolor sit amet consectetur
+        adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing
+        elit. Optio soluta dolor, fuga officiis delectus quibusdam excepturi
+        exercitationem consectetur accusamus numquam quisquam ullam? Itaque,
+        excepturi aliquam voluptate sint nemo voluptatibus quia!
 
-    <div class="div--3">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aspernatur
-      dolores provident modi officia, rerum odio alias esse praesentium hic
-      architecto deleniti ipsum quia velit sed excepturi, vitae distinctio
-      explicabo! Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        <span class="thumbnail"
+          ><img class="myImage" src="rose.jpeg" alt="rose flower"
+        /></span>
 
-      <img src="rose.jpeg" alt="rose flower" />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+        aspernatur dolores provident modi officia, rerum odio alias esse
+        praesentium hic architecto deleniti ipsum quia velit sed excepturi,
+        vitae distinctio explicabo! Lorem, ipsum dolor sit amet consectetur
+        adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Totam distinctio ea recusandae numquam alias illum facilis tempora
+        fuga reprehenderit nemo iure nisi aliquam deserunt id, culpa molestias
+        quibusdam ratione unde?
+      </div>
     </div>
   </body>
 </html>
