--- a/WAP/W1D2/flexing-nav-bar/index.html
+++ b/WAP/W1D2/flexing-nav-bar/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="nav">
-      <div class="links">
-        <a href="#">Label 1</a>
-        <a href="#">Label 2</a>
-        <a href="#">Label 3</a>
-      </div>
-      <div class="logout">
-        <a href="#">Logout</a>
+    <div class="container">
+      <div class="nav">
+        <div class="links">
+          <a href="#">Label 1</a>
+          <a href="#">Label 2</a>
+          <a href="#">Label 3</a>
+        </div>
+        <div class="logout">
+          <a href="#">Logout</a>
+        </div>
       </div>
     </div>
   </body>
