--- a/WAP/W1D2/quiz1-html/index.html
+++ b/WAP/W1D2/quiz1-html/index.html
@@ -3,70 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quiz 1: WAP class practice</title>
-    <style>
-      table, th, td{border:1px solid rgb(220, 10, 10);}
-    </style>
+    <title>Quiz 1: WAP html basic</title>
   </head>
   <body>
-    <label><b>Lists</b></label>
-    <ul>
-      <li>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nulla
-        minus odit maiores voluptatem sapiente laborum, qui expedita, veritatis
-        aliquam quae laudantium ratione asperiores quaerat neque explicabo
-        officia ducimus quis. <pre>  <img src="alaska3.jpg" style="width:100px; height:100px" alt="alaska sunrise"/> </pre>
-        <ol>
-          <li>Rose<img src="rose.jpeg" style="width:100px; height:100px" alt="rose flower"/></li>
-          <li>Purple<img src="purple.jpeg" style="width:100px; height:100px" alt="purple flower"/></li>
-        </ol>
-        <li><a href="https://www.amazon.com" target="_blank">Amazon</a></li>
-      </li>
-    </ul>
-    <label><b>Colors</b></label>
-    <br/>
-    <br/>
-    <label><b>Red</b></label> &nbsp &nbsp &nbsp
-    <label><b>Blue</b></label>
-    <hr>
-    <!-- Descriptive List-->
-    <dl>
-      <dt>Computers</dt>
-        <dd>Dell</dd>
-        <dd>Mac</dd>
-        <dd>hp</dd>
-      <dt>Coding</dt>
-        <dd>HTML</dd>
-        <dd>CSS</dd>
-        <dd>JS</dd>
-    </dl>
-    <hr>
+    <hr />
+    <h4>My First Blog</h4>
+    <img
+      src="alaska3.jpg"
+      alt="alaska sunrise"
+      style="width: 100px; height: 100px"
+    />
+    <hr />
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
+      cumque necessitatibus voluptatibus delectus omnis qui minima labore alias
+      fugit, exercitationem expedita quam veritatis commodi, laborum sit
+      obcaecati debitis reprehenderit dicta!
+    </p>
+
+    <h5>Links</h5>
+
+    <a href="https://www.google.com" target="_blank">
+      <img
+        src="alaska3.jpg"
+        alt="alaska sunrise"
+        style="width: 100px; height: 100px"
+    /></a>
+    Google
+
+    <a href="https://www.amazon.com" target="_blank">
+      <img
+        src="alaska3.jpg"
+        alt="alaska sunrise"
+        style="width: 100px; height: 100px"
+    /></a>
+    Amazon
+    <a href="https://www.paypal.com" target="_blank">
+      <img
+        src="alaska3.jpg"
+        alt="alaska sunrise"
+        style="width: 100px; height: 100px"
+      />
+    </a>
+    Paypal
+    <br />
+    <p><b>Birth Month Flowers</b></p>
     <table>
       <thead>
         <tr>
-          <th>Team</th>
-          <th>Dates</th>
-          <th>Total</th>
+          <th>Month</th>
+          <th>Flower</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>Blue</td>
-          <td>Nov. 10</td>
-          <td>100 points</td>
+          <td>May</td>
+          <td>Lily of Valley</td>
         </tr>
         <tr>
-          <td>Red</td>
-          <td>Jun. 10</td>
-          <td>300 points</td>
-        </tr>
-        <tr>
-          <td colspan="2">Total</td>
-          <td >400</td>
+          <td>June</td>
+          <td>
+            <ul>
+              <li>Rose</li>
+              <li>HoneySuckle</li>
+            </ul>
+          </td>
         </tr>
       </tbody>
     </table>
-    <hr>
-    Copyright &copy; 2024 Geoffrey Duncan Opiyo
   </body>
 </html>
