practicing box-model-part-2

--- a/WAP/W1D2/box-model-2/index.html
+++ b/WAP/W1D2/box-model-2/index.html
@@ -10,8 +10,8 @@
     <div class="contianer">
       <h3>Image Right</h3>
       <div class="in--between-1">
-        <span class="thumbnail right"
-          ><img class="myImage" src="rose.jpeg" alt="rose flower" /></span
+        <span class="thumbnail"
+          ><img class="myImage right" src="rose.jpeg" alt="rose flower" /></span
         >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
         aspernatur dolores provident modi officia, rerum odio alias esse
         praesentium hic architecto deleniti ipsum quia velit sed excepturi,
