Page layouts - Float, FlexBox, CSS Grid

--- a/WAP/W1D3/practice-quiz/index.html
+++ b/WAP/W1D3/practice-quiz/index.html
@@ -10,8 +10,10 @@
     <div class="container">
       <div class="nav">
         <div class="logo">
-          <h3>Embodied</h3>
-          <h5>Health</h5>
+          <ul>
+            <li><h3>Embodied</h3></li>
+            <li><h5>Health</h5></li>
+          </ul>
         </div>
         <div class="links">
           <a href="#home">Home</a>
