--- a/WAP/W1D5/Basic-JavaScript-Assign/index.html
+++ b/WAP/W1D5/Basic-JavaScript-Assign/index.html
@@ -20,7 +20,7 @@
     <h1><u>MIU Basic JavaScript</u></h1>
     <p>Maharishi International University JavaScript assignment.</p>
 
-    <script type="text/javascript" src="js/custom.js"></script>
+    <script type="text/javascript" src="js/part1.js"></script>
 
     <noscript>
       <p>Oops! This website requires a JavaScript-enabled browser.</p>
