--- a/WAP/W1D6/index.html
+++ b/WAP/W1D6/index.html
@@ -34,6 +34,6 @@
   </head>
   <body>
     <h1>JavaScript Arrays</h1>
-    <script src="jsArrays.js"></script>
+    <script src="javascriptQuestion.js"></script>
   </body>
 </html>
