--- a/WAP/W2D2/DOMQuiz-Trials/index.html
+++ b/WAP/W2D2/DOMQuiz-Trials/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dynamic Form Built</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <title>DOM Quiz - Trial</title>
   </head>
   <body>
     <script type="text/javascript" src="script.js"></script>
-    <noscript>
-      <p>Opps! This side requires Javascript to be enabled</p>
-    </noscript>
   </body>
+  <noscript>
+    <p>Opps! This side requires JavaScript enabled</p>
+  </noscript>
 </html>
