CSS animation and JavaScript timers

--- a/CSSAnimation/car-bike/index.html
+++ b/CSSAnimation/car-bike/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
   </head>
   <body>
-    <div class="background">
+    <div class="scene">
+      <div class="sun"></div>
       <div class="rain">
         <h2 class="text--rain">Raining... alert drivers...</h2>
         <div class="messages">
@@ -22,7 +23,9 @@
           <div class="heart"></div>
         </div>
 
-        <img src="images/car.png" alt="Red Saloon Car" class="car" />
+        <img src="images/car.png" alt="Red Passenger Car" class="car1" />
+
+        <img src="images/police_car.gif" alt="Police Car" class="car2" />
         <img src="images/motobike.png" alt="Motorbike" class="motobike" />
       </div>
     </div>
