CSS - Animation and JavaSCript Timers

--- a/CSSAnimation/car-bike/index.html
+++ b/CSSAnimation/car-bike/index.html
@@ -16,7 +16,8 @@
             <div class="lightbar"></div>
             <div class="toplayer"></div>
             <h3>
-              Designed by Geoffrey and Reza with [Love]. Happy women's day!
+              Designed by Geoffrey and Reza with [Love].
+              <span class="women--day"></span>
             </h3>
           </div>
 
