--- a/A-Default-Starter-CSS/index.html
+++ b/A-Default-Starter-CSS/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Default Starter CSS</title>
-    <link rel="stylesheet" href="main.css" />
+    <!--Normalized CSSS-->
+    <link rel="stylesheet" href="./normalized.css" />
+    <!--Main CSS-->
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <h1>Default Starter CSS</h1>
