--- a/A-Default-Starter-CSS/index.html
+++ b/A-Default-Starter-CSS/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Default Starter CSS</title>
     <!--Normalized CSSS-->
-    <link rel="stylesheet" href="./normalized.css" />
+    <link rel="stylesheet" href="normalized.css" />
     <!--Main CSS-->
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <h1>Default Starter CSS</h1>
@@ -37,5 +37,50 @@
       <li>Second item</li>
       <li>Third item</li>
     </ul>
+    <img src="./computer.jpeg" alt="computer" class="img" />
+    <br />
+    <button class="btn" type="button">regular button</button>
+    <button class="btn btn-hipster" type="button">hipster button</button>
+    <br />
+    <br />
+    <br />
+
+    <div class="alert alert-danger">hello from danger</div>
+    <div class="alert alert-success">hello from success</div>
+    <form class="form">
+      <h4>contact form</h4>
+      <div class="form-row">
+        <label for="name" class="form-label">Name</label>
+        <input
+          type="text"
+          placeholder="hello there"
+          id="name"
+          class="form-input"
+        />
+      </div>
+      <div class="form-row">
+        <label for="number" class="form-label">Number</label>
+        <input type="number" id="number" class="form-input" />
+      </div>
+      <div class="form-row">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" id="email" class="form-input" />
+        <small class="form-alert">please provide value</small>
+      </div>
+      <div class="form-row">
+        <label for="textarea" class="form-label">Textarea</label>
+        <textarea class="form-textarea">
+Default Value
+        </textarea>
+      </div>
+      <button type="submit" class="btn btn-block">submit</button>
+    </form>
+    <div class="loading"></div>
+    <br />
+    <br />
+    <div class="title">
+      <h2>section title</h2>
+      <div class="title-underline"></div>
+    </div>
   </body>
 </html>
